--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,17 @@ services:
     ports:
       - "8082:8080"
 
+  willow-gardens:
+    build:
+      context: ./PineValleyService
+    container_name: willow-gardens
+    volumes:
+      - ./PineValleyService:/app
+    networks:
+      - kong-net
+    ports:
+      - "8083:8080"
+
 networks:
   kong-net:
     driver: bridge
