--- a/PineValleyService/Dockerfile
+++ b/PineValleyService/Dockerfile
@@ -2,17 +2,13 @@ FROM openjdk:17-jdk-slim AS builder
 
 ARG SBT_VERSION=1.10.5
 
-RUN apt-get update && \
-    apt-get install -y curl && \
-    mkdir /working/ && \
-    cd /working/ && \
-    curl -L -o sbt-$SBT_VERSION.deb https://repo.scala-sbt.org/scalasbt/debian/sbt-$SBT_VERSION.deb && \
-    dpkg -i sbt-$SBT_VERSION.deb && \
-    rm sbt-$SBT_VERSION.deb && \
-    apt-get update && \
-    apt-get install -y sbt && \
-    cd && \
-    rm -r /working/
+RUN apt-get update && apt-get install -y \
+    curl \
+    && curl -L -o sbt-$SBT_VERSION.deb https://repo.scala-sbt.org/scalasbt/debian/sbt-$SBT_VERSION.deb \
+    && dpkg -i sbt-$SBT_VERSION.deb \
+    && apt-get install -y sbt \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
